--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ lazy_static = "1.4"
 warp = "0.3"
 prometheus = { version = "0.13", features = ["process"] }
 futures = { version = "0.3", default-features = false }
-tokio = "1.19"
+tokio = { version = "1.19.2", features = ["full"] }
 rand = "0.8"
 chrono = "0.4"
 
