--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ license = "MIT OR Apache-2.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-azure-iot-sdk = { git = "ssh://git@github.com/ICS-DeviceManagement/azure-iot-sdk.git", tag = "0.8.1", features = ["module_client"] }
+azure-iot-sdk = { git = "ssh://git@github.com/ICS-DeviceManagement/azure-iot-sdk.git", tag = "0.8.1", default-features = false }
 sd-notify = { git = "ssh://git@github.com/ICS-DeviceManagement/sd-notify.git", tag = "v0.5.0", optional = true }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -28,5 +28,8 @@ chrono = "0.4"
 
 [features]
 # don't select systemd as default feature
-default = []
+default = ["module_client", "systemd"]
 systemd = ["sd-notify"]
+device_client = ["azure-iot-sdk/device_client"]
+module_client = ["azure-iot-sdk/module_client"]
+edge_client = ["azure-iot-sdk/edge_client"]
