--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ rand = "0.8"
 chrono = "0.4"
 
 [features]
-# don't select systemd as default feature
+# select if systemd ready and watchdog should be enabled
 default = ["module_client", "systemd"]
 systemd = ["sd-notify"]
 device_client = ["azure-iot-sdk/device_client"]
