--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "windfarm-monitoring"
-version = "0.1.10"
+version = "0.1.11"
 edition = "2021"
 authors = ["Joerg Zeidler <joerg.zeidler@conplement.de>", "Jan Zachmann <jan.zachmann@conplement.de>"]
 repository = "git@github.com:ICS-DeviceManagement/windfarm-monitoring.git"
@@ -24,6 +24,7 @@ futures = { version = "0.3", default-features = false }
 tokio = { version = "1.19.2", features = ["full"] }
 rand = "0.8"
 chrono = { version = "0.4", default-features = false, features = ["clock"] }
+log-panics = { version = "2", features = ["with-backtrace"] }
 
 [features]
 # select if systemd ready and watchdog should be enabled
