--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,16 @@
 [package]
 name = "windfarm-monitoring"
-version = "0.1.15"
+version = "0.1.16"
 edition = "2021"
-authors = ["Joerg Zeidler <joerg.zeidler@conplement.de>", "Jan Zachmann <jan.zachmann@conplement.de>"]
+authors = ["omnect@conplement.de>"]
 repository = "git@github.com:omnect/windfarm-monitoring.git"
 license = "MIT OR Apache-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-azure-iot-sdk = { git = "ssh://git@github.com/omnect/azure-iot-sdk.git", tag = "0.8.8", default-features = false }
+anyhow = "1.0"
+azure-iot-sdk = { git = "ssh://git@github.com/omnect/azure-iot-sdk.git", tag = "0.9.2", default-features = false }
 chrono = { version = "0.4", default-features = false, features = ["clock"] }
 default-env = "0.1"
 env_logger = "0.8"
@@ -18,9 +19,10 @@ futures-executor = "0.3"
 lazy_static = "1.4"
 log = "0.4"
 log-panics = { version = "2", features = ["with-backtrace"] }
+once_cell = "1.17"
 prometheus = { version = "0.13", features = ["process"] }
 rand = "0.8"
-sd-notify = { version = "0.4.1", optional = true }
+sd-notify = { version = "0.4", optional = true }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 time = { version = "0.3", features = ["formatting"] }
