--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "windfarm-monitoring"
-version = "0.1.17"
+version = "0.1.18"
 edition = "2021"
 authors = ["omnect@conplement.de>"]
 repository = "git@github.com:omnect/windfarm-monitoring.git"
@@ -9,6 +9,7 @@ license = "MIT OR Apache-2.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+actix-web = "4.3"
 anyhow = "1.0"
 azure-iot-sdk = { git = "ssh://git@github.com/omnect/azure-iot-sdk.git", tag = "0.9.2", default-features = false }
 chrono = { version = "0.4", default-features = false, features = ["clock"] }
@@ -27,7 +28,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 time = { version = "0.3", features = ["formatting"] }
 tokio = { version = "1", features = ["full"] }
-warp = "0.3"
 
 [features]
 # select if systemd ready and watchdog should be enabled
