--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "windfarm-monitoring"
-version = "0.2.2"
+version = "0.2.3"
 edition = "2021"
 authors = ["omnect@conplement.de>"]
 repository = "git@github.com:omnect/windfarm-monitoring.git"
@@ -11,7 +11,7 @@ license = "MIT OR Apache-2.0"
 [dependencies]
 actix-web = "4.3"
 anyhow = "1.0"
-azure-iot-sdk = { git = "ssh://git@github.com/omnect/azure-iot-sdk.git", tag = "0.9.2", default-features = false }
+azure-iot-sdk = { git = "https://github.com/omnect/azure-iot-sdk.git", tag = "0.9.5", default-features = false }
 chrono = { version = "0.4", default-features = false, features = ["clock"] }
 default-env = "0.1"
 env_logger = "0.8"
