--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,20 +1,18 @@
 [package]
-name = "windfarm-monitoring"
-version = "0.3.0"
-edition = "2021"
 authors = ["omnect@conplement.de>"]
-repository = "git@github.com:omnect/windfarm-monitoring.git"
+edition = "2021"
+description = "This edge module simulates metrics of a virtua windfarm device."
+homepage = "https://www.omnect.io/home"
 license = "MIT OR Apache-2.0"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+name = "windfarm-monitoring"
+readme = "README.md"
+repository = "git@github.com:omnect/windfarm-monitoring.git"
+version = "0.3.0"
 
 [dependencies]
 actix-web = "4.3"
 anyhow = "1.0"
-#azure-iot-sdk = { git = "https://github.com/omnect/azure-iot-sdk.git", tag = "0.10.0", features = [
-#   "module_client",
-#] }
-azure-iot-sdk = { git = "https://github.com/JanZachmann/azure-iot-sdk.git", branch = "async-api", features = [
+azure-iot-sdk = { git = "https://github.com/omnect/azure-iot-sdk.git", tag = "0.10.0", features = [
     "edge_client",
 ] }
 chrono = { version = "0.4", default-features = false, features = ["clock"] }
@@ -30,10 +28,3 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 time = { version = "0.3", features = ["formatting"] }
 tokio = { version = "1", features = ["full"] }
-
-[features]
-# select if systemd ready and watchdog should be enabled
-default = ["edge_client"]
-device_client = ["azure-iot-sdk/device_client"]
-module_client = ["azure-iot-sdk/module_client"]
-edge_client = ["azure-iot-sdk/edge_client"]
