--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,38 +1,30 @@
 [package]
-name = "windfarm-monitoring"
-version = "0.2.3"
-edition = "2021"
 authors = ["omnect@conplement.de>"]
-repository = "git@github.com:omnect/windfarm-monitoring.git"
+edition = "2021"
+description = "This edge module simulates metrics of a virtual windfarm device."
+homepage = "https://www.omnect.io/home"
 license = "MIT OR Apache-2.0"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+name = "windfarm-monitoring"
+readme = "README.md"
+repository = "git@github.com:omnect/windfarm-monitoring.git"
+version = "0.3.0"
 
 [dependencies]
 actix-web = "4.3"
 anyhow = "1.0"
-azure-iot-sdk = { git = "https://github.com/omnect/azure-iot-sdk.git", tag = "0.9.5", default-features = false }
+azure-iot-sdk = { git = "https://github.com/omnect/azure-iot-sdk.git", tag = "0.10.0", features = [
+    "edge_client",
+] }
 chrono = { version = "0.4", default-features = false, features = ["clock"] }
 default-env = "0.1"
 env_logger = "0.8"
-futures = { version = "0.3", default-features = false }
 futures-executor = "0.3"
 lazy_static = "1.4"
 log = "0.4"
 log-panics = { version = "2", features = ["with-backtrace"] }
-once_cell = "1.17"
 prometheus = { version = "0.13", features = ["process"] }
 rand = "0.8"
-sd-notify = { version = "0.4", optional = true }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 time = { version = "0.3", features = ["formatting"] }
 tokio = { version = "1", features = ["full"] }
-
-[features]
-# select if systemd ready and watchdog should be enabled
-default = ["module_client", "systemd"]
-systemd = ["sd-notify"]
-device_client = ["azure-iot-sdk/device_client"]
-module_client = ["azure-iot-sdk/module_client"]
-edge_client = ["azure-iot-sdk/edge_client"]
