--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,27 +1,30 @@
 [package]
 authors = ["omnect@conplement.de>"]
-edition = "2021"
+edition = "2024"
 description = "This edge module simulates metrics of a virtual windfarm device."
 homepage = "https://www.omnect.io/home"
 license = "MIT OR Apache-2.0"
 name = "windfarm-monitoring"
 readme = "README.md"
 repository = "git@github.com:omnect/windfarm-monitoring.git"
-version = "0.4.1"
+version = "0.4.2"
 
 [dependencies]
-anyhow = "1.0"
-azure-iot-sdk = { git = "https://github.com/omnect/azure-iot-sdk.git", tag = "0.13.5", features = [
+anyhow = { version = "1.0", default-features = false }
+azure-iot-sdk = { git = "https://github.com/omnect/azure-iot-sdk.git", tag = "0.13.5", default-features = false, features = [
     "edge_client",
 ] }
 chrono = { version = "0.4", default-features = false, features = ["clock"] }
 env_logger = { version = "0.11", default-features = false }
-futures-executor = "0.3"
-lazy_static = "1.4"
-log = "0.4"
-log-panics = { version = "2", features = ["with-backtrace"] }
-rand = "0.8"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-time = { version = "0.3", features = ["formatting"] }
-tokio = { version = "1", features = ["full"] }
+futures-executor = { version = "0.3", default-features = false }
+lazy_static = { version = "1.5", default-features = false }
+log = { version = "0.4", default-features = false }
+log-panics = { version = "2", default-features = false }
+rand = { version = "0.8", default-features = false, features = [
+    "std",
+    "std_rng",
+] }
+serde = { version = "1.0", default-features = false, features = ["derive"] }
+serde_json = { version = "1.0", default-features = false }
+time = { version = "0.3", default-features = false, features = ["formatting"] }
+tokio = { version = "1", default-features = false, features = ["full"] }
