--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,16 +7,18 @@ license = "MIT OR Apache-2.0"
 name = "windfarm-monitoring"
 readme = "README.md"
 repository = "git@github.com:omnect/windfarm-monitoring.git"
-version = "0.4.2"
+version = "0.4.3"
 
 [dependencies]
 anyhow = { version = "1.0", default-features = false }
-azure-iot-sdk = { git = "https://github.com/omnect/azure-iot-sdk.git", tag = "0.13.5", default-features = false, features = [
+azure-iot-sdk = { git = "https://github.com/omnect/azure-iot-sdk.git", tag = "0.14.1", default-features = false, features = [
     "edge_client",
 ] }
 chrono = { version = "0.4", default-features = false, features = ["clock"] }
 env_logger = { version = "0.11", default-features = false }
-futures-executor = { version = "0.3", default-features = false }
+futures-executor = { version = "0.3", default-features = false, features = [
+    "std",
+] }
 lazy_static = { version = "1.5", default-features = false }
 log = { version = "0.4", default-features = false }
 log-panics = { version = "2", default-features = false }
@@ -27,4 +29,4 @@ rand = { version = "0.8", default-features = false, features = [
 serde = { version = "1.0", default-features = false, features = ["derive"] }
 serde_json = { version = "1.0", default-features = false }
 time = { version = "0.3", default-features = false, features = ["formatting"] }
-tokio = { version = "1", default-features = false, features = ["full"] }
+tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
